// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receiptItems.remove > functionality > foreign receipt 1`] = `
{
  "deleted": {
    "receiptItems": {
      "id:b47ec0e6-8880-481f-8a84-50e575e188a4": undefined,
    },
  },
}
`;

exports[`receiptItems.remove > functionality > own receipt 1`] = `
{
  "deleted": {
    "receiptItems": {
      "id:9abf4d08-92ee-407e-9f69-ee8737322076": undefined,
    },
  },
}
`;
